--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,15 +8,14 @@
     <script type="importmap">
     {
         "imports": {
-            "preact": "https://esm.sh/preact@10.27.0",
-            "preact/hooks": "https://esm.sh/preact@10.27.0/hooks",
-            "preact/jsx-runtime": "https://esm.sh/preact@10.27.0/jsx-runtime"
+            "preact": "https://esm.sh/preact@10.27.1",
+            "preact/hooks": "https://esm.sh/preact@10.27.1/hooks"
         }
     }
     </script>
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="/app.js"></script>
+    <script type="module" src="/js/app.js"></script>
 </body>
 </html>
